fixed: profile cover preview stretched

--- a/views/default/css/cover/site.css
+++ b/views/default/css/cover/site.css
@@ -7,7 +7,7 @@
 		
 		img {
 			max-height: 200px;
-			width: 100%;
+			max-width: 100%;
 		}
 	}
 }
